# MotoSell-django

./: README.md  db.sqlite3  manage.py  package-lock.json  pyproject.toml
MotoSell/: asgi.py  settings.py  urls.py  wsgi.py
accounts/: forms.py  serializers.py  urls.py  views.py
accounts/templates/motosell_app/: base.html  form.html
accounts/templates/registration/: login.html  register_form.html
frontend-MotoSell/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
frontend-MotoSell/src/: index.html
frontend-MotoSell/src/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  car-offer.ts  jwt.interceptor.ts  user.ts
media/files/images/: pobrany_plik_JjUjCBy.jfif
motosell_app/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
motosell_app/migrations/: 0001_initial.py  0002_alter_caroffer_add_date_alter_caroffer_pub_date.py  0002_alter_caroffer_ispublished.py  0002_caroffer_isdeleted_alter_caroffer_car_category_and_more.py  0003_alter_caroffer_pub_date.py  0003_caroffer_isdeleted.py  0003_caroffer_price.py  0004_alter_caroffer_isdeleted.py  0005_alter_caroffer_isdeleted.py  0006_alter_caroffer_isdeleted_alter_caroffer_ispublished.py  0007_alter_caroffer_car_category_and_more.py  0008_alter_caroffer_description_alter_caroffer_title.py  0009_alter_caroffer_description_alter_caroffer_title.py  0010_alter_caroffer_pub_date.py  0011_alter_caroffer_fuel_category.py
motosell_app/templates/motosell_app/: base.html  create_order.html  form.html  home.html  (+1 more)
(+31 files in other folders)
